--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Brain 050 Test</title></head><body><h1>Test</h1></body></html>
+<!doctype html><html><head><meta charset=utf-8><title>Test</title></head><body><h1>Test deploy</h1></body></html>
